--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "handlebars": "^4.7.7",
     "highlight.js": "~9.18",
     "js-yaml": "~3.13",
+    "lunr": "^2.3.9",
+    "lunr-languages": "^1.4.0",
     "merge-stream": "~2.0",
     "postcss-calc": "~7.0",
     "postcss-custom-properties": "^10.0.0",
